syntax = "proto3";

package kopi.dex;

import "gogoproto/gogo.proto";
import "kopi/dex/params.proto";
import "kopi/dex/liquidity.proto";
import "kopi/dex/order.proto";
import "kopi/dex/wallet_trade_amount.proto";

// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/kopi-money/kopi/x/dex/types";

// GenesisState defines the dex module's genesis state.
message GenesisState {
  Params        params = 1 [(gogoproto.nullable) = false];

  repeated DenomLiquidity    liquidity_list = 2 [(gogoproto.nullable) = false];
  repeated Order             orderList = 3 [(gogoproto.nullable) = false];
  repeated WalletTradeAmount wallet_trade_amount = 4 [(gogoproto.nullable) = false];

  uint64 liquidity_next_index = 5;
  uint64 order_next_index = 6;

  // this line is used by starport scaffolding # genesis/proto/state
}

